[gd_scene load_steps=14 format=3 uid="uid://jym00tuoxqch"]

[ext_resource type="PackedScene" uid="uid://cukn40ilg0yp3" path="res://assets/characters/Rogue_Hooded.glb" id="1_d7xhm"]
[ext_resource type="Script" uid="uid://b4m246jw57var" path="res://scripts/player.gd" id="2_ou4w3"]
[ext_resource type="PackedScene" uid="uid://c2u2s4onjaipf" path="res://assets/character_items/ak47.glb" id="3_abk0e"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ou4w3"]
animation = &"Running_Strafe_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_abk0e"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fx6rw"]
animation = &"2H_Ranged_Shooting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v0w2y"]
animation = &"Running_Strafe_Left"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_atf0n"]
filter_enabled = true
filters = ["Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_anfej"]
xfade_time = 0.3
input_0/name = "RunLeft"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "RunRight"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "Run"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_27mb0"]
graph_offset = Vector2(-658.132, 73.0235)
nodes/Animation/node = SubResource("AnimationNodeAnimation_v0w2y")
nodes/Animation/position = Vector2(-500, 200)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_ou4w3")
"nodes/Animation 2/position" = Vector2(-500, 380)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_abk0e")
"nodes/Animation 3/position" = Vector2(-480, 560)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_fx6rw")
"nodes/Animation 4/position" = Vector2(120, 380)
nodes/RunWeapon/node = SubResource("AnimationNodeBlend2_atf0n")
nodes/RunWeapon/position = Vector2(440, 260)
nodes/Transition/node = SubResource("AnimationNodeTransition_anfej")
nodes/Transition/position = Vector2(-100, 220)
nodes/output/position = Vector2(620, 220)
node_connections = [&"RunWeapon", 0, &"Transition", &"RunWeapon", 1, &"Animation 4", &"Transition", 0, &"Animation", &"Transition", 1, &"Animation 2", &"Transition", 2, &"Animation 3", &"output", 0, &"RunWeapon"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d7xhm"]
radius = 0.75
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ou4w3"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_abk0e"]
radius = 0.75
height = 3.0

[node name="Rogue_Hooded" instance=ExtResource("1_d7xhm")]
script = ExtResource("2_ou4w3")

[node name="Rig" parent="." index="0"]
transform = Transform3D(1.295, 0, 0, 0, 1.295, 0, 0, 0, 1.295, 0, -1.495, 0)

[node name="Skeleton3D" parent="Rig" index="0"]
bones/1/position = Vector3(0, 0.392064, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/3/rotation = Quaternion(8.27181e-25, 3.72529e-09, -2.75506e-40, 1)
bones/4/position = Vector3(0.212007, 0.134132, 7.92996e-08)
bones/4/rotation = Quaternion(-0.559906, -0.0608803, -0.643974, 0.517779)
bones/5/rotation = Quaternion(3.65498e-08, -4.88301e-08, -0.494719, 0.869053)
bones/7/rotation = Quaternion(-0.321065, -0.325319, 0.145726, 0.87741)
bones/8/position = Vector3(8.34843e-10, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(-3.6586e-09, 6.87811e-09, -0.707107, 0.707107)
bones/10/position = Vector3(-0.212007, 0.134132, 8.6814e-08)
bones/10/rotation = Quaternion(-0.618244, 0.0807287, 0.618012, 0.478873)
bones/11/rotation = Quaternion(2.09853e-08, 5.12855e-08, 0.517939, 0.855417)
bones/13/rotation = Quaternion(-0.319291, 0.300524, -0.22735, 0.869512)
bones/14/position = Vector3(-1.5736e-08, 0.0961251, -0.0575)
bones/14/rotation = Quaternion(-1.02444e-09, -4.24391e-09, 0.707107, 0.707107)
bones/19/rotation = Quaternion(-5.8061e-11, -0.0313416, -1.88013e-09, 0.999509)
bones/21/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/21/rotation = Quaternion(0.996185, 0.0479136, 0.0566427, -0.045939)
bones/22/rotation = Quaternion(0.165014, 6.49414e-08, -1.11408e-07, 0.986291)
bones/23/rotation = Quaternion(-0.533729, -0.260895, -1.72985e-05, 0.804405)
bones/24/rotation = Quaternion(-2.32092e-08, 0.920355, -0.391084, 7.25743e-08)
bones/25/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/25/rotation = Quaternion(0.997322, -0.0294574, 0.0315293, 0.0590483)
bones/26/rotation = Quaternion(0.274008, -6.38135e-08, 1.92761e-07, 0.961727)
bones/27/rotation = Quaternion(-0.559039, 0.114513, -0.00862763, 0.82115)
bones/28/rotation = Quaternion(3.03597e-08, 0.920355, -0.391084, -6.95338e-08)
bones/29/rotation = Quaternion(0.707107, -2.29302e-07, -4.60551e-08, 0.707107)
bones/30/position = Vector3(0.213918, 0.0259903, 0.173866)
bones/30/rotation = Quaternion(-0.705092, 0.0533355, 0.0533355, 0.705092)
bones/31/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/32/position = Vector3(-1.11482e-08, 0.213436, -5.36347e-09)
bones/32/rotation = Quaternion(-1.10961e-07, 0.391084, 0.920355, -2.67919e-08)
bones/33/position = Vector3(-6.31128e-09, 0.16565, -7.10267e-09)
bones/34/rotation = Quaternion(1, -8.27364e-11, 1.94627e-07, -7.45058e-09)
bones/36/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/37/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/38/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/39/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/39/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/40/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/41/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/43/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/44/position = Vector3(0.520841, 0.788312, -0.0576373)
bones/44/rotation = Quaternion(0.794627, -1.11759e-07, 0.607098, -5.96046e-08)
bones/45/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/46/position = Vector3(-0.510844, 0.788312, 0.0597369)
bones/46/rotation = Quaternion(-0.758253, -1.52737e-07, 0.651961, -1.11759e-08)

[node name="Knife_Offhand" parent="Rig/Skeleton3D" index="0"]
transform = Transform3D(4.18024e-07, 0.262863, 0.964832, 0.999999, -3.99356e-07, -9.13908e-08, 4.9995e-07, 0.964833, -0.262863, 0.507764, 0.636705, -0.0185363)
visible = false

[node name="1H_Crossbow" parent="Rig/Skeleton3D" index="1"]
transform = Transform3D(0.988701, -0.149894, 4.29265e-07, 8.4854e-08, -2.79322e-07, -0.999999, 0.149895, 0.988701, -6.49041e-07, -0.489506, 0.745658, 0.0963389)
visible = false

[node name="2H_Crossbow" parent="Rig/Skeleton3D" index="2"]
transform = Transform3D(0.988701, -0.149894, 4.29265e-07, 8.4854e-08, -2.79322e-07, -0.999999, 0.149895, 0.988701, -6.49041e-07, -0.489506, 0.745658, 0.0963389)

[node name="2H_Crossbow" parent="Rig/Skeleton3D/2H_Crossbow" index="0"]
visible = false

[node name="ak472" parent="Rig/Skeleton3D/2H_Crossbow" index="1" instance=ExtResource("3_abk0e")]
transform = Transform3D(0.128196, 3.40617e-05, -2.09608, -1.43144e-05, 2.1, 3.32494e-05, 2.09608, 1.22562e-05, 0.128196, -0.00999999, 0.125, 0.24)

[node name="Knife" parent="Rig/Skeleton3D" index="3"]
transform = Transform3D(-4.25085e-07, -0.149894, 0.988701, 0.999999, -1.31135e-07, 1.03093e-07, 4.99794e-07, 0.988701, 0.149894, -0.491059, 0.64103, 0.10658)
visible = false

[node name="Throwable" parent="Rig/Skeleton3D" index="4"]
transform = Transform3D(-4.09345e-07, -0.149894, 0.988701, 0.999999, -1.16402e-07, 8.9407e-08, 4.87279e-07, 0.988701, 0.149894, -0.518076, 0.64103, 0.28479)
visible = false

[node name="Rogue_Cape" parent="Rig/Skeleton3D" index="5"]
transform = Transform3D(0.996275, -5.14962e-09, 0.0862353, 5.13043e-09, 1, 4.44077e-10, -0.0862353, 1.88007e-15, 0.996275, -4.17227e-09, 1.20227, 1.52591e-15)

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeBlendTree_27mb0")
anim_player = NodePath("../AnimationPlayer")
parameters/RunWeapon/blend_amount = 1.0
parameters/Transition/current_state = "Run"
parameters/Transition/transition_request = ""
parameters/Transition/current_index = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="3"]
shape = SubResource("CapsuleShape3D_d7xhm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="4"]
visible = false
material_override = SubResource("StandardMaterial3D_ou4w3")
mesh = SubResource("CapsuleMesh_abk0e")

[node name="ShootTimer" type="Timer" parent="." index="5"]
wait_time = 1.5
autostart = true

[node name="BulletSpawnPos" type="Marker3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.456635, 0, 1.50919)

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
